--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /node_modules
 /.pnp
 .pnp.js
+/backend/node_modules
+/backend/.env
 
 # testing
 /coverage
@@ -12,12 +14,13 @@
 /build
 
 # misc
+.idea
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-/.idea
+
 
 npm-debug.log*
 yarn-debug.log*
