--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
-/backend/node_modules
-/backend/.env
 
 # testing
 /coverage
@@ -16,6 +14,7 @@
 # misc
 .idea
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
