--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules/
+/node_modules
 /.pnp
 .pnp.js
 
@@ -12,7 +12,7 @@ node_modules/
 /build
 
 # misc
-.idea
+.idea/
 .DS_Store
 .env
 .env.local
@@ -24,3 +24,4 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/backend/node_modules/
