--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/backend/node_modules/
 /.pnp
 .pnp.js
 
@@ -12,7 +13,7 @@
 /build
 
 # misc
-.idea/
+/backend/.env
 .DS_Store
 .env
 .env.local
@@ -24,4 +25,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/backend/node_modules/
+
+.idea
+
